discussion/kv_engine/175099/175099_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52216: Remove rate limitations added for capella

That work was superseeded by the work done in Elixir

Change-Id: I08895d746059b1a450320dd19fdeec5b64dea390

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-20 13:07:34.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-20 13:32:34.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46261/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_environment.cc(437): error C2039: "user": is not a member of "cb::sasl::pwdb" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46261/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17607/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_environment.cc:437:31: error: no member named "user" in namespace "cb::sasl::pwdb"; did you mean "User"? [clang-diagnostic-error]
        using cb::sasl::pwdb::user::Limits;
                              ^~~~
                              User
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/cbsasl/user.h:27:7: note: "User" declared here
class User {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_environment.cc:437:37: error: using declaration cannot refer to class member [clang-diagnostic-error]
        using cb::sasl::pwdb::user::Limits;
                                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17607/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_environment.cc:437:31:
error: no member named "user" in namespace "cb::sasl::pwdb"; did you mean "User"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17607/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18582/ : FAILURE

Compile error at [2022-05-20T13:25:28.488Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp/testapp_environment.cc:437:31:
error: no member named "user" in namespace "cb::sasl::pwdb"; did you mean "User"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18582/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7318/ : FAILURE

Compile error at [2022-05-20T13:23:13.929Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_environment.cc:437:31:
error: ?cb::sasl::pwdb::user? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7216/ : FAILURE

Compile error at [2022-05-20T13:24:05.473Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp/testapp_environment.cc:437:31:
error: no member named "user" in namespace "cb::sasl::pwdb"; did you mean "User"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7216/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19376/ : FAILURE

Compile error at [2022-05-20T13:28:29.435Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_environment.cc:437:31:
error: ?cb::sasl::pwdb::user? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19376/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19724/ : FAILURE

Compile error at [2022-05-20T13:22:42.465Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp/testapp_environment.cc:437:31:
error: ?cb::sasl::pwdb::user? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19724/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20394/ : FAILURE

Compile error at [2022-05-20T13:24:47.945Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_environment.cc:437:31:
error: no member named "user" in namespace "cb::sasl::pwdb"; did you mean "User"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20394/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27777/ : FAILURE

Compile error at [2022-05-20T13:31:58.372Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp/testapp_environment.cc:437:31:
error: no member named "user" in namespace "cb::sasl::pwdb"; did you mean "User"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27777/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16631/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38869/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
